feat(corp/rih): wire up captcha solving callback
This turned out a lot nicer than I expected it to be.

Change-Id: I427670644eba789ea2037423fa9af8e632b19b34
Reviewed-on: https://cl.tvl.fyi/c/depot/+/8695
Tested-by: BuildkiteCI
Reviewed-by: tazjin <tazjin@tvl.su>

--- a/corp/rih/src/home.html
+++ b/corp/rih/src/home.html
@@ -1,12 +1,13 @@
 html! {
 <main>
   <script>
-    {r#"function captchaOnload(sitekey) {
+    {r#"function captchaOnload(sitekey, callback) {
       if (window.smartCaptcha) {
         const container = document.getElementById('captcha-container');
         const widgetId = window.smartCaptcha.render(container, {
             sitekey: sitekey,
             hl: 'en',
+            callback: callback,
         });
       }
     }"#}
