feat(corp/rih): activate submit button when data is complete
The completion detection is very naive for now, but baby steps etc.

Change-Id: Iec6eae77fca13f3fc0ee1225268eef04277b504a
Reviewed-on: https://cl.tvl.fyi/c/depot/+/8702
Tested-by: BuildkiteCI
Reviewed-by: tazjin <tazjin@tvl.su>

--- a/corp/rih/src/home.html
+++ b/corp/rih/src/home.html
@@ -171,7 +171,10 @@ html! {
 
           <div id="captcha-container" class="smart-captcha mb-3" style="height: 100px" />
 
-          <button type="submit" class="btn btn-primary" disabled=true>{"Submit"}</button>
+          <button type="submit" class="btn btn-primary"
+                  disabled={!(self.record.is_complete() && self.captcha_token.is_some())}>
+            {"Submit"}
+          </button>
           <p class="pt-2"><i>{"This page is still under construction! Please reach out at contact@ if you have any questions."}</i></p>
         </form>
       </div>
