--- a/corp/tvixbolt/index.html
+++ b/corp/tvixbolt/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
-          href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css" />
+          href="https://static.tvl.su/latest/terminal.min.css" />
     <link data-trunk rel="inline" href="index.css">
     <title>Tvixbolt</title>
 
