fix(corp/rih): link fixes
Change-Id: I424250ba71192623d6b6636284f5be3516dfdea4
Reviewed-on: https://cl.tvl.fyi/c/depot/+/8945
Autosubmit: tazjin <tazjin@tvl.su>
Reviewed-by: tazjin <tazjin@tvl.su>
Tested-by: BuildkiteCI

--- a/corp/rih/frontend/index.html
+++ b/corp/rih/frontend/index.html
@@ -7,6 +7,7 @@
     <title>Russia is Hiring</title>
     <link data-trunk rel="inline" href="index.css">
     <link data-trunk rel="copy-file" href="rih-logo.png">
+    <link data-trunk rel="copy-file" href="privacy-policy.html">
     <link data-trunk rel="copy-dir" href="img">
     <link data-trunk rel="copy-dir" href="fonts">
 
