--- a/corp/rih/frontend/src/home.html
+++ b/corp/rih/frontend/src/home.html
@@ -243,7 +243,8 @@ html! {
       <div class="form-check mb-3">
 	<input class="form-check-input" type="checkbox" id="privacy-policy" required=true />
 	<label class="form-check-label" for="privacy-policy">
-	  {"I have read and agree to the Privacy Policy"}
+	  {"I have read and agree to the "}
+          <a href="/privacy-policy.html">{"privacy policy"}</a>
 	</label>
       </div>
 
@@ -268,7 +269,9 @@ html! {
 <footer class="footer m-0 py-3">
   <div class="container">
     <div class="row text-center">
-      <div class="col-12 col-sm-4 text-sm-start">{"privacy policy"}</div>
+      <div class="col-12 col-sm-4 text-sm-start">
+        <a href="/privacy-policy.html">{"privacy policy"}</a>
+      </div>
       <div class="col-12 col-sm-4">
         {"By "}
         <a href={VISTA_URL} class="text-white">{"Vista Immigration"}</a>
